--- a/src/BTL/index.html
+++ b/src/BTL/index.html
@@ -40,10 +40,30 @@
                                 </li>
                                 <li class="header__navbar-item"><a href="#">Home</a></li>
                                 <li class="header__navbar-dropdown header__navbar-item">
-                                    <a href="" class="sf-with-ul">Course</a>
+                                    <a href="">Course
+                                        <i class="header__navbar-arrow-down ti-angle-down"></i>
+                                    </a>
+                                    <ul class="header__navbar-dropdown-list">
+                                        <li>
+                                            <a href="">Semester Courses</a>
+                                        </li>
+                                        <li>
+                                            <a href="">A-Z Courses</a>
+                                        </li>
+                                    </ul>
                                 </li>
                                 <li class="header__navbar-dropdown header__navbar-item">
-                                    <a href="" class="sf-with-ul">Support</a>
+                                    <a href="">Support
+                                        <i class="header__navbar-arrow-down ti-angle-down"></i>
+                                    </a>
+                                    <ul class="header__navbar-dropdown-list">
+                                        <li>
+                                            <a href="">Support for Students</a>
+                                        </li>
+                                        <li>
+                                            <a href="">Support for Teachers</a>
+                                        </li>
+                                    </ul>
                                 </li>
                                 <li class="header__navbar-item">
                                     <a href="#">News</a>
