--- a/src/BTL/index.html
+++ b/src/BTL/index.html
@@ -31,7 +31,7 @@
             <div class="header__navbar">
                 <div class="header__navbar-inner">
                     <div class="container-fluid">
-                        <div class="row row_between">
+                        <div class="row row__between">
                             <ul class="header__navbar-list">
                                 <li class="header__navbar-home-item">
                                     <a href="\" title="BTL nhóm 12">
@@ -89,8 +89,105 @@
             </div>
         </header>
 
-        <div class="container">
+        <div class="slider">
+            <img src="./assets/img/sliders/slide2.jpg" alt="" class="slider__img">
+        </div>
 
+        <div class="content">
+            <!-- about section -->
+            <div class="content__section">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="content__section-inner col-half">
+                            <div class="content__section-title">
+                                <h4 class="content__section-title-text">
+                                    Giới thiệu
+                                </h4>
+                            </div>
+
+                            <div class="content__section-intro">
+                                <span>Blended-learning system is a Learning Management System (LMS) to support teaching & blended-learning methods for Faculties and Schools in Hanoi University of Science and Technology (HUST). The system takes full advantage of applied ICT in teaching & learning to improve training efficiency; saving the use of facilities and face-to-face class times for staff and students.</span>
+                            </div>
+
+                            <a href="" class="btn btn--primary btn-lg btn-icon-before">
+                                <span class="btn-intext">Read more</span>
+                            </a>
+                        </div>
+
+                        <div class="content__section-inner">
+                            <div class="content__section-img">
+                                <div class="content__section-img-box">
+                                    <a href="#">
+                                        <div class="content__section-img-link">
+                                            <img src="./assets/img/content-section/img2.png" alt="">
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>  
+
+            <!-- description -->
+            <div class="content__description">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="content__description-inner col-fourth">
+                            <div class="content__description-box">
+                                <div class="content__description-box-container">
+                                    <div class="content__description-box-icon">
+                                        <i class="ti-basketball"></i>
+                                    </div>
+                                    <div class="content__description-box-infor">
+                                        <h4>Tài liệu học tập phong phú</h4>
+                                        Our E-learning system includes several well-designed courses with rich multimedia contents from prestigious lecturers from University.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="content__description-inner col-fourth">
+                            <div class="content__description-box">
+                                <div class="content__description-box-container">
+                                    <div class="content__description-box-icon">
+                                        <i class="ti-basketball"></i>
+                                    </div>
+                                    <div class="content__description-box-infor">
+                                        <h4>Tài liệu học tập phong phú</h4>
+                                        Our E-learning system includes several well-designed courses with rich multimedia contents from prestigious lecturers from University.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="content__description-inner col-fourth">
+                            <div class="content__description-box">
+                                <div class="content__description-box-container">
+                                    <div class="content__description-box-icon">
+                                        <i class="ti-basketball"></i>
+                                    </div>
+                                    <div class="content__description-box-infor">
+                                        <h4>Tài liệu học tập phong phú</h4>
+                                        Our E-learning system includes several well-designed courses with rich multimedia contents from prestigious lecturers from University.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="content__description-inner col-fourth">
+                            <div class="content__description-box">
+                                <div class="content__description-box-container">
+                                    <div class="content__description-box-icon">
+                                        <i class="ti-basketball"></i>
+                                    </div>
+                                    <div class="content__description-box-infor">
+                                        <h4>Tài liệu học tập phong phú</h4>
+                                        Our E-learning system includes several well-designed courses with rich multimedia contents from prestigious lecturers from University.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <footer class="footer">
