--- a/src/BTL/index.html
+++ b/src/BTL/index.html
@@ -188,10 +188,159 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Tips -->
+            <div class="content__tips">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="content__tips-inner col-half">
+                            <div class="content__tips-video">
+                                <div class="content__tips-video-container">
+                                    <video controls="true">
+                                        <source src="./assets/video/tips.mp4" type="video/mp4">
+                                        Trình duyệt của bạn không hỗ trợ thẻ video.
+                                      </video>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="content__tips-inner col-half">
+                            <div class="content__tips-nav">
+                                <ul class="content__tips-nav-list">
+                                    <li class="content__tips-nav-item active">
+                                        <a href="" class="content__tips-nav-link active">Mẹo nhỏ cho học sinh</a>
+                                    </li>
+                                    <li class="content__tips-nav-item">
+                                        <a href="" class="content__tips-nav-link">Mẹo nhỏ cho giáo viên</a>
+                                    </li>
+                                </ul>
+
+                                <div class="content__tips-tab">
+                                    <div class="content__tips-tab-pane">
+                                        <h4>Welcome Students to the Learning Management System (LMS) of HUST. Before joining LMS, all Students need to be informed about Blended-learning(Blearning) classes on system, and will be advised, learnt on Blearning by teachers, used the LMS system, prepared necessary equipment. All students should use HUST Office 365 account to log in LMS system by selecting the button HUST STAFF & STUDENTS.</h4>
+                                        <a href="" class="btn btn--primary btn-lg btn-icon-before">
+                                            <span class="btn-intext">Read more</span>
+                                        </a>
+                                    </div>
+
+                                    <div class="content__tips-tab-pane active">
+                                        <h4>Welcome Teachers to the Learning Management System (LMS) of HUST. Before joining LMS, all teachers must register with Academic Office and Information Network Center to open Blended-learning classes. All teachers and students should read user guide of LMS Moodle before starting classes. All users should use HUST Office 365 account to log in LMS system by selecting the button HUST STAFF & STUDENTS.</h4>
+                                        <a href="" class="btn btn--primary btn-lg btn-icon-before">
+                                            <span class="btn-intext">Read more</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- courses -->
+            <div class="content__courses">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="content__courses-inner">
+                            <div class="content__courses-title">
+                                <h4 class="content__courses-title-text">Khóa học cơ bản</h4>
+                            </div>
+
+                            <div class="content__course-slider">
+                                <div class="content__course-slider-inner col-fourth">
+                                    <div class="content__course-slider-item">
+                                        <a href="" class="">
+                                            <div class="content__course-slider-img">
+                                                <img src="./assets/img/courses/courses1.jpg" alt="">
+                                            </div>
+                                            <div class="content__course-slider-text1">
+                                                <div class="content__course-slider-text2">
+                                                    <div class="content__course-slider-text3">
+                                                        <div class="content__course-slider-text4">
+                                                            <h4 class="content__course-slider-title">Học nhập môn</h4>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+    
+                                <div class="content__course-slider-inner col-fourth">
+                                    <div class="content__course-slider-item">
+                                        <a href="" class="">
+                                            <div class="content__course-slider-img">
+                                                <img src="./assets/img/courses/courses1.jpg" alt="">
+                                            </div>
+                                            <div class="content__course-slider-text1">
+                                                <div class="content__course-slider-text2">
+                                                    <div class="content__course-slider-text3">
+                                                        <div class="content__course-slider-text4">
+                                                            <h4 class="content__course-slider-title">Học nhập môn</h4>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+    
+                                <div class="content__course-slider-inner col-fourth">
+                                    <div class="content__course-slider-item">
+                                        <a href="" class="">
+                                            <div class="content__course-slider-img">
+                                                <img src="./assets/img/courses/courses1.jpg" alt="">
+                                            </div>
+                                            <div class="content__course-slider-text1">
+                                                <div class="content__course-slider-text2">
+                                                    <div class="content__course-slider-text3">
+                                                        <div class="content__course-slider-text4">
+                                                            <h4 class="content__course-slider-title">Học nhập môn</h4>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="content__course-slider-inner col-fourth">
+                                    <div class="content__course-slider-item">
+                                        <a href="" class="">
+                                            <div class="content__course-slider-img">
+                                                <img src="./assets/img/courses/courses1.jpg" alt="">
+                                            </div>
+                                            <div class="content__course-slider-text1">
+                                                <div class="content__course-slider-text2">
+                                                    <div class="content__course-slider-text3">
+                                                        <div class="content__course-slider-text4">
+                                                            <h4 class="content__course-slider-title">Học nhập môn</h4>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <footer class="footer">
+            <div class="footer__socials-list">
+                <a href="#"><i class="ti-facebook"></i></a>
+                <a href="#"><i class="ti-twitter"></i></a>
+                <a href="#"><i class="ti-instagram"></i></a>
+                <a href="#"><i class="ti-dribbble"></i></a>
+                <a href="#"><i class="ti-pinterest"></i></a>
+                <a href="#"><i class="ti-vimeo"></i></a>
+                <a href="#"><i class="ti-linkedin"></i></a>
+                <a href="#"><i class="ti-rss"></i></a>
+            </div>
 
+            <p class="footer__copyright">Powered by <a href="">Nhóm 12</a></p>
         </footer>
 
         <!-- Modal layout -->
